--- a/front/static/front/css/style.css
+++ b/front/static/front/css/style.css
@@ -16405,7 +16405,7 @@ li.with-megamenu:hover .rts-megamenu {
   }
 }
 .banner-left-five-area-start .inner-content-banner-five span {
-  color: #629D23;
+  color: #629d23;
   font-size: 16px;
   font-weight: 600;
 }
