--- a/templates/dashboard/countries.html
+++ b/templates/dashboard/countries.html
@@ -147,12 +147,12 @@
                         <!-- /main-content-wrap -->
                         <!-- bottom-page -->
                         <script src="{% static 'js/jquery.min.js' %}"></script>
-<script src="{% static 'js/bootstrap.min.js' %}"></script>
-<script src="{% static 'js/bootstrap-select.min.js' %}"></script>
-<script src="{% static 'js/zoom.js' %}"></script>
-<script src="{% static 'js/switcher.js' %}"></script>
-<script src="{% static 'js/theme-settings.js' %}"></script>
-<script src="{% static 'js/main.js' %}"></script>
+<script src="{% static 'dashboard/js/bootstrap.min.js' %}"></script>
+<script src="{% static 'dashboard/js/bootstrap-select.min.js' %}"></script>
+<script src="{% static 'dashboard/js/zoom.js' %}"></script>
+<script src="{% static 'dashboard/js/switcher.js' %}"></script>
+<script src="{% static 'dashboard/js/theme-settings.js' %}"></script>
+<script src="{% static 'dashboard/js/main.js' %}"></script>
 
 </body>
 
