--- a/templates/dashboard/home-menu-icon-hover.html
+++ b/templates/dashboard/home-menu-icon-hover.html
@@ -885,20 +885,20 @@
     <!-- /#wrapper -->
 
     <!-- Javascript -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/bootstrap-select.min.js"></script>
-    <script src="js/zoom.js"></script>
-    <script src="js/apexcharts/apexcharts.js"></script>
-    <script src="js/apexcharts/line-chart-17.js"></script>
-    <script src="js/apexcharts/line-chart-18.js"></script>
-    <script src="js/apexcharts/line-chart-19.js"></script>
-    <script src="js/apexcharts/line-chart-20.js"></script>
-    <script src="js/apexcharts/line-chart-21.js"></script>
-    <script src="js/apexcharts/line-chart-22.js"></script>
-    <script src="js/switcher.js"></script>
-    <script src="js/theme-settings.js"></script>
-    <script src="js/main.js"></script>
+    <script src="dashboard/js/jquery.min.js"></script>
+    <script src="dashboard/js/bootstrap.min.js"></script>
+    <script src="dashboard/js/bootstrap-select.min.js"></script>
+    <script src="dashboard/js/zoom.js"></script>
+    <script src="dashboard/js/apexcharts/apexcharts.js"></script>
+    <script src="dashboard/js/apexcharts/line-chart-17.js"></script>
+    <script src="dashboard/js/apexcharts/line-chart-18.js"></script>
+    <script src="dashboard/js/apexcharts/line-chart-19.js"></script>
+    <script src="dashboard/js/apexcharts/line-chart-20.js"></script>
+    <script src="dashboard/js/apexcharts/line-chart-21.js"></script>
+    <script src="dashboard/js/apexcharts/line-chart-22.js"></script>
+    <script src="dashboard/js/switcher.js"></script>
+    <script src="dashboard/js/theme-settings.js"></script>
+    <script src="dashboard/js/main.js"></script>
 
 </body>
 
