--- a/templates/dashboard/login.html
+++ b/templates/dashboard/login.html
@@ -7,7 +7,7 @@
     <div id="wrapper">
         <!-- #page -->
         <div id="page" class="">
-            <div class="wrap-login-page">
+            <div class="wrap-dashboard/-page">
                 <div class="flex-grow flex flex-column justify-center gap30">
                     <a href="index.html" id="site-logo-inner">
                         
@@ -90,10 +90,10 @@
     <!-- /#wrapper -->
 
     <!-- Javascript -->
-    <script src="{% static 'js/jquery.min.js' %}"></script>
-<script src="{% static 'js/bootstrap.min.js' %}"></script>
-<script src="{% static 'js/bootstrap-select.min.js' %}"></script>
-<script src="{% static 'js/main.js' %}"></script>
+    <script src="{% static 'dashboard/js/jquery.min.js' %}"></script>
+<script src="{% static 'dashboard/js/bootstrap.min.js' %}"></script>
+<script src="{% static 'dashboard/js/bootstrap-select.min.js' %}"></script>
+<script src="{% static 'dashboard/js/main.js' %}"></script>
 
 </body>
 
