--- a/templates/dashboard/new-page.html
+++ b/templates/dashboard/new-page.html
@@ -207,15 +207,15 @@
     <!-- /#wrapper -->
 
     <!-- Javascript -->
-    <script src="{% static 'js/jquery.min.js' %}"></script>
-<script src="{% static 'js/bootstrap.min.js' %}"></script>
-<script src="{% static 'js/bootstrap-select.min.js' %}"></script>
-<script src="{% static 'js/zoom.js' %}"></script>
-    <script src="{% static 'js/tinymce/tinymce.min.js' %}"></script>
-    <script src="{% static 'js/tinymce/tinymce-custom.js' %}"></script>
-    <script src="{% static 'js/switcher.js' %}"></script>
-<script src="{% static 'js/theme-settings.js' %}"></script>
-<script src="{% static 'js/main.js' %}"></script>
+    <script src="{% static 'dashboard/js/jquery.min.js' %}"></script>
+<script src="{% static 'dashboard/js/bootstrap.min.js' %}"></script>
+<script src="{% static 'dashboard/js/bootstrap-select.min.js' %}"></script>
+<script src="{% static 'dashboard/js/zoom.js' %}"></script>
+    <script src="{% static 'dashboard/js/tinymce/tinymce.min.js' %}"></script>
+    <script src="{% static 'dashboard/js/tinymce/tinymce-custom.js' %}"></script>
+    <script src="{% static 'dashboard/js/switcher.js' %}"></script>
+<script src="{% static 'dashboard/js/theme-settings.js' %}"></script>
+<script src="{% static 'dashboard/js/main.js' %}"></script>
 
 </body>
 
