--- a/templates/dashboard/sign-up.html
+++ b/templates/dashboard/sign-up.html
@@ -104,10 +104,10 @@
     <!-- /#wrapper -->
 
     <!-- Javascript -->
-    <script src="{% static 'js/jquery.min.js' %}"></script>
-<script src="{% static 'js/bootstrap.min.js' %}"></script>
-<script src="{% static 'js/bootstrap-select.min.js' %}"></script>
-<script src="{% static 'js/main.js' %}"></script>
+    <script src="{% static 'dashboard/js/jquery.min.js' %}"></script>
+<script src="{% static 'dashboard/js/bootstrap.min.js' %}"></script>
+<script src="{% static 'dashboard/js/bootstrap-select.min.js' %}"></script>
+<script src="{% static 'dashboard/js/main.js' %}"></script>
 
 </body>
 
