--- a/templates/dashboard/cities.html
+++ b/templates/dashboard/cities.html
@@ -336,13 +336,13 @@
                         </div>
                         <!-- /main-content-wrap -->
                         <!-- bottom-page -->
-                        <script src="{% static 'js/jquery.min.js' %}"></script>
-                        <script src="{% static 'js/bootstrap.min.js' %}"></script>
-                        <script src="{% static 'js/bootstrap-select.min.js' %}"></script>
-                        <script src="{% static 'js/zoom.js' %}"></script>
-                        <script src="{% static 'js/switcher.js' %}"></script>
-                        <script src="{% static 'js/theme-settings.js' %}"></script>
-                        <script src="{% static 'js/main.js' %}"></script></body>
+                        <script src="{% static 'dashboard/js/jquery.min.js' %}"></script>
+                        <script src="{% static 'dashboard/js/bootstrap.min.js' %}"></script>
+                        <script src="{% static 'dashboard/js/bootstrap-select.min.js' %}"></script>
+                        <script src="{% static 'dashboard/js/zoom.js' %}"></script>
+                        <script src="{% static 'dashboard/js/switcher.js' %}"></script>
+                        <script src="{% static 'dashboard/js/theme-settings.js' %}"></script>
+                        <script src="{% static 'dashboard/js/main.js' %}"></script></body>
 
 
 <!-- Mirrored from themesflat.co/html/remos/cities.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 05 Aug 2024 08:40:32 GMT -->
