--- a/templates/dashboard/components.html
+++ b/templates/dashboard/components.html
@@ -1183,27 +1183,27 @@
     <!-- /#wrapper -->
 
     <!-- Javascript -->
-    <script src="{% static 'js/jquery.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap-select.min.js' %}"></script>
-    <script src="{% static 'js/zoom.js' %}"></script>
-    <script src="{% static 'js/jvectormap-1.2.2.min.js' %}"></script>
-    <script src="{% static 'js/jvectormap-us-lcc.js' %}"></script>
-    <script src="{% static 'js/jvectormap.js' %}"></script>
-    <script src="{% static 'js/morris.min.js' %}"></script>
-    <script src="{% static 'js/raphael.min.js' %}"></script>
-    <script src="{% static 'js/morris.js' %}"></script>
-    <script src="{% static 'js/apexcharts/apexcharts.js' %}"></script>
-    <script src="{% static 'js/apexcharts/line-chart-1.js' %}"></script>
-    <script src="{% static 'js/apexcharts/line-chart-6.js' %}"></script>
-    <script src="{% static 'js/apexcharts/line-chart-7.js' %}"></script>
-    <script src="{% static 'js/apexcharts/line-chart-9.js' %}"></script>
-    <script src="{% static 'js/apexcharts/line-chart-10.js' %}"></script>
-    <script src="{% static 'js/apexcharts/line-chart-15.js' %}"></script>
-    <script src="{% static 'js/apexcharts/line-chart-18.js' %}"></script>
-    <script src="{% static 'js/switcher.js' %}"></script>
-    <script src="{% static 'js/theme-settings.js' %}"></script>
-    <script src="{% static 'js/main.js' %}"></script>
+    <script src="{% static 'dashboard/js/jquery.min.js' %}"></script>
+    <script src="{% static 'dashboard/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'dashboard/js/bootstrap-select.min.js' %}"></script>
+    <script src="{% static 'dashboard/js/zoom.js' %}"></script>
+    <script src="{% static 'dashboard/js/jvectormap-1.2.2.min.js' %}"></script>
+    <script src="{% static 'dashboard/js/jvectormap-us-lcc.js' %}"></script>
+    <script src="{% static 'dashboard/js/jvectormap.js' %}"></script>
+    <script src="{% static 'dashboard/js/morris.min.js' %}"></script>
+    <script src="{% static 'dashboard/js/raphael.min.js' %}"></script>
+    <script src="{% static 'dashboard/js/morris.js' %}"></script>
+    <script src="{% static 'dashboard/js/apexcharts/apexcharts.js' %}"></script>
+    <script src="{% static 'dashboard/js/apexcharts/line-chart-1.js' %}"></script>
+    <script src="{% static 'dashboard/js/apexcharts/line-chart-6.js' %}"></script>
+    <script src="{% static 'dashboard/js/apexcharts/line-chart-7.js' %}"></script>
+    <script src="{% static 'dashboard/js/apexcharts/line-chart-9.js' %}"></script>
+    <script src="{% static 'dashboard/js/apexcharts/line-chart-10.js' %}"></script>
+    <script src="{% static 'dashboard/js/apexcharts/line-chart-15.js' %}"></script>
+    <script src="{% static 'dashboard/js/apexcharts/line-chart-18.js' %}"></script>
+    <script src="{% static 'dashboard/js/switcher.js' %}"></script>
+    <script src="{% static 'dashboard/js/theme-settings.js' %}"></script>
+    <script src="{% static 'dashboard/js/main.js' %}"></script>
 
 </body>
 
