--- a/templates/dashboard/create-role.html
+++ b/templates/dashboard/create-role.html
@@ -1,5 +1,5 @@
 {% load static %}
-{% include './header_dashboard.html' %}
+{% include './header_dashboard.html' %}dashboard/
 
                     <!-- /header-dashboard -->
                     <!-- main-content -->
@@ -331,13 +331,13 @@
                         </div>
                         <!-- /main-content-wrap -->
                         <!-- bottom-page -->
-                        <script src="{% static 'js/jquery.min.js' %}"></script>
-                        <script src="{% static 'js/bootstrap.min.js' %}"></script>
-                        <script src="{% static 'js/bootstrap-select.min.js' %}"></script>
-                        <script src="{% static 'js/zoom.js' %}"></script>
-                        <script src="{% static 'js/switcher.js' %}"></script>
-                        <script src="{% static 'js/theme-settings.js' %}"></script>
-                        <script src="{% static 'js/main.js' %}"></script>
+                        <script src="{% static 'dashboard/js/jquery.min.js' %}"></script>
+                        <script src="{% static 'dashboard/js/bootstrap.min.js' %}"></script>
+                        <script src="{% static 'dashboard/js/bootstrap-select.min.js' %}"></script>
+                        <script src="{% static 'dashboard/js/zoom.js' %}"></script>
+                        <script src="{% static 'dashboard/js/switcher.js' %}"></script>
+                        <script src="{% static 'dashboard/js/theme-settings.js' %}"></script>
+                        <script src="{% static 'dashboard/js/main.js' %}"></script>
 </body>
 
 
