--- a/templates/dashboard/footer.html
+++ b/templates/dashboard/footer.html
@@ -17,17 +17,17 @@
 <!-- /#wrapper -->
 
 <!-- Javascript -->
-<script src="{% static 'js/jquery.min.js' %}"></script>
-<script src="{% static 'js/bootstrap.min.js' %}"></script>
-<script src="{% static 'js/bootstrap-select.min.js' %}"></script>
-<script src="{% static 'js/zoom.js' %}"></script>
-<script src="{% static 'js/apexcharts/apexcharts.js' %}"></script>
-<script src="{% static 'js/apexcharts/line-chart-1.js' %}"></script>
-<script src="{% static 'js/apexcharts/line-chart-2.js' %}"></script>
-<script src="{% static 'js/apexcharts/line-chart-3.js' %}"></script>
-<script src="{% static 'js/apexcharts/line-chart-4.js' %}"></script>
-<script src="{% static 'js/apexcharts/line-chart-5.js' %}"></script>
-<script src="{% static 'js/apexcharts/line-chart-6.js' %}"></script>
-<script src="{% static 'js/switcher.js' %}"></script>
-<script src="{% static 'js/theme-settings.js' %}"></script>
-<script src="{% static 'js/main.js' %}"></script>
+<script src="{% static 'dashboard/js/jquery.min.js' %}"></script>
+<script src="{% static 'dashboard/js/bootstrap.min.js' %}"></script>
+<script src="{% static 'dashboard/js/bootstrap-select.min.js' %}"></script>
+<script src="{% static 'dashboard/js/zoom.js' %}"></script>
+<script src="{% static 'dashboard/js/apexcharts/apexcharts.js' %}"></script>
+<script src="{% static 'dashboard/js/apexcharts/line-chart-1.js' %}"></script>
+<script src="{% static 'dashboard/js/apexcharts/line-chart-2.js' %}"></script>
+<script src="{% static 'dashboard/js/apexcharts/line-chart-3.js' %}"></script>
+<script src="{% static 'dashboard/js/apexcharts/line-chart-4.js' %}"></script>
+<script src="{% static 'dashboard/js/apexcharts/line-chart-5.js' %}"></script>
+<script src="{% static 'dashboard/js/apexcharts/line-chart-6.js' %}"></script>
+<script src="{% static 'dashboard/js/switcher.js' %}"></script>
+<script src="{% static 'dashboard/js/theme-settings.js' %}"></script>
+<script src="{% static 'dashboard/js/main.js' %}"></script>
