--- a/templates/dashboard/header_dashboard.html
+++ b/templates/dashboard/header_dashboard.html
@@ -787,7 +787,7 @@
                                                     <img src="{% static 'images/avatar/user-1.png' %}" alt="">
                                                 </span>
                                                 <span class="flex flex-column">
-                                                    <span class="body-title mb-2">Kristin Watson</span>
+                                                    <span class="body-title mb-2">{{users.username}}</span>
                                                     <span class="text-tiny">Admin</span>
                                                 </span>
                                             </span>
