--- a/templates/dashboard/home-2.html
+++ b/templates/dashboard/home-2.html
@@ -174,7 +174,11 @@
                                                     {% if produit.best_seller == True %}
                                                         <li class="product-item gap14">
                                                             <div class="image">
-                                                                <img src="{{ produit.img_produit.url }}" alt="">
+                                                                {% if product.img_produit %}
+                                                                    <img src={{product.img_produit.url}} alt="">
+                                                                {% else %}
+                                                                    <img src="https://dummyimage.com/600x600/2275fc/000&text=Pas+d'image+disponible+pour+ce+produit" alt="">
+                                                                {% endif %}
                                                             </div>
                                                             <div class="flex items-center justify-between flex-grow">
                                                                 <div class="name">
@@ -826,23 +830,23 @@
     <!-- /#wrapper -->
 
     <!-- Javascript -->
-    <script src="{% static 'js/jquery.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap-select.min.js' %}"></script>
-    <script src="{% static 'js/zoom.js' %}"></script>
-    <script src="{% static 'js/jvectormap-1.2.2.min.js' %}"></script>
-    <script src="{% static 'js/jvectormap-us-lcc.js' %}"></script>
-    <script src="{% static 'js/jvectormap.js' %}"></script>
-    <script src="{% static 'js/apexcharts/apexcharts.js' %}"></script>
-    <script src="{% static 'js/apexcharts/line-chart-1.js' %}"></script>
-    <script src="{% static 'js/apexcharts/line-chart-2.js' %}"></script>
-    <script src="{% static 'js/apexcharts/line-chart-3.js' %}"></script>
-    <script src="{% static 'js/apexcharts/line-chart-4.js' %}"></script>
-    <script src="{% static 'js/apexcharts/line-chart-5.js' %}"></script>
-    <script src="{% static 'js/apexcharts/line-chart-6.js' %}"></script>
-    <script src="{% static 'js/switcher.js' %}"></script>
-    <script src="{% static 'js/theme-settings.js' %}"></script>
-    <script src="{% static 'js/main.js' %}"></script>
+    <script src="{% static 'dashboard/js/jquery.min.js' %}"></script>
+    <script src="{% static 'dashboard/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'dashboard/js/bootstrap-select.min.js' %}"></script>
+    <script src="{% static 'dashboard/js/zoom.js' %}"></script>
+    <script src="{% static 'dashboard/js/jvectormap-1.2.2.min.js' %}"></script>
+    <script src="{% static 'dashboard/js/jvectormap-us-lcc.js' %}"></script>
+    <script src="{% static 'dashboard/js/jvectormap.js' %}"></script>
+    <script src="{% static 'dashboard/js/apexcharts/apexcharts.js' %}"></script>
+    <script src="{% static 'dashboard/js/apexcharts/line-chart-1.js' %}"></script>
+    <script src="{% static 'dashboard/js/apexcharts/line-chart-2.js' %}"></script>
+    <script src="{% static 'dashboard/js/apexcharts/line-chart-3.js' %}"></script>
+    <script src="{% static 'dashboard/js/apexcharts/line-chart-4.js' %}"></script>
+    <script src="{% static 'dashboard/js/apexcharts/line-chart-5.js' %}"></script>
+    <script src="{% static 'dashboard/js/apexcharts/line-chart-6.js' %}"></script>
+    <script src="{% static 'dashboard/js/switcher.js' %}"></script>
+    <script src="{% static 'dashboard/js/theme-settings.js' %}"></script>
+    <script src="{% static 'dashboard/js/main.js' %}"></script>
 
 </body>
 
